--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "start:functions:dev": "ENVIRONMENT_MODE=development pnpm --filter functions start",
+    "run:migrate:latest:dev": "ENVIRONMENT_MODE=development pnpm --filter databases migrate:latest",
+    "run:migrate:down:dev": "ENVIRONMENT_MODE=development pnpm --filter databases migrate:down:latest",
+    "action:test": "act --container-architecture linux/amd64 --secret-file ./.config/act.vault"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
