--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -5,17 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "deploy": "vercel deploy --prod",
+    "lint": "eslint **/*.ts*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^2.5.22",
-    "databases": "workspace:*"
+    "bcrypt": "^5.1.0",
+    "common": "workspace:*",
+    "databases": "workspace:*",
+    "jsonschema": "^1.4.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "vercel": "^28.4.8",
-    "tsconfig": "workspace:*"
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "tsconfig": "workspace:*",
+    "vercel": "^28.4.8"
   }
 }
