fix: missing 'j' letter on yaml jobs section

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,7 +5,7 @@ on:
     types: [completed]
     branches: [main]
 
-obs:
+jobs:
   standard-deployments:
     name: Deployment flow
     runs-on: ubuntu-latest
