--- a/apps/vocab-memization-web/package.json
+++ b/apps/vocab-memization-web/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@smui/button": "^6.1.4",
+    "@smui/circular-progress": "^6.1.4",
     "@smui/textfield": "^6.1.4",
     "@tsconfig/svelte": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -20,6 +21,7 @@
     "common": "workspace:*",
     "eslint": "^8.25.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "jwt-decode": "^3.1.2",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.1",
     "rollup": "^2.79.1",
