--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -23,6 +23,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "tsconfig": "workspace:*",
-    "vercel": "^28.4.8"
+    "vercel": "^28.4.8",
+    "eslint": "7.32.0",
+    "typescript": "^4.5.2"
   }
 }
